--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^5.13.0",
     "jest": "^24.1.0",
     "nodemon": "^1.18.9",
+    "prettier": "1.16.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   }
