Generate a service products on a MongoDB connection

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@feathersjs/feathers": "^3.3.1",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "feathers-mongodb": "^4.0.4",
     "helmet": "^3.15.0",
+    "mongodb": "^3.1.13",
+    "mongodb-core": "^3.1.11",
     "serve-favicon": "^2.5.0",
     "winston": "^3.0.0"
   },
