--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@feathersjs/express": "^1.3.1",
     "@feathersjs/feathers": "^3.3.1",
     "compression": "^1.7.3",
+    "connect-mongodb-session": "^2.1.0",
     "cors": "^2.8.5",
+    "express-session": "^1.15.6",
     "feathers-mongodb": "^4.0.4",
     "helmet": "^3.15.0",
     "mongodb": "^3.1.13",
