--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run eslint && NODE_ENV= npm run jest",
+    "test": "npm run eslint && NODE_ENV=test npm run jest",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
